--- a/package.json
+++ b/package.json
@@ -11,15 +11,20 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.17.11",
+    "@react-native-community/blur": "^4.3.0",
+    "@react-native-community/cli-debugger-ui": "^10.0.0",
     "@react-native-masked-view/masked-view": "^0.2.8",
     "@react-navigation/bottom-tabs": "^6.5.3",
     "@react-navigation/native": "^6.1.2",
     "@react-navigation/stack": "^6.3.11",
     "@reduxjs/toolkit": "^1.9.1",
     "axios": "^1.2.2",
+    "moment": "^2.29.4",
     "react": "18.2.0",
+    "react-moment": "^1.1.3",
     "react-native": "0.71.0",
     "react-native-gesture-handler": "^2.9.0",
+    "react-native-modal": "^13.0.1",
     "react-native-safe-area-context": "^4.4.1",
     "react-native-screens": "^3.18.2",
     "react-redux": "^8.0.5"
